added more dancers with more animations

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -7,12 +7,14 @@
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/supermanDancer.js"></script>
+    <script src="src/extraDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSupermanDancer">add a superman dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeExtraDancer">add an extra dancer</a>    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
