--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,13 +8,16 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/supermanDancer.js"></script>
     <script src="src/extraDancer.js"></script>
+    <script src="src/doSomething.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSupermanDancer">add a superman dancer</a>    </div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeExtraDancer">add an extra dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSupermanDancer">add a superman dancer</a>    
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeExtraDancer">add an extra dancer</a>   
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="doSomething">move first dancer to middle</a>   
+    </div> 
     <script src="src/init.js"></script>
   </body>
 </html>
