added mouseover functionality, and images

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -16,7 +16,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSupermanDancer">add a superman dancer</a>    
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeExtraDancer">add an extra dancer</a>   
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="doSomething">move first dancer to middle</a>   
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="doSomething">line up dancers</a>   
     </div> 
     <script src="src/init.js"></script>
   </body>
