--- a/dancefloor.html
+++ b/dancefloor.html
@@ -17,6 +17,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSupermanDancer">add a superman dancer</a>    
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeExtraDancer">add an extra dancer</a>   
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="doSomething">line up dancers</a>   
+      <a href="#" id="copycat" class="addDancerButton" data-dancer-maker-function-name="Copycat">Copy cat</a>   
     </div> 
     <script src="src/init.js"></script>
   </body>
